# axum-openwrt

./: .gitignore  Cargo.toml  Iot展望.md  OpenWrt 工具链编译.md  bindings本地提交.md  c库编译llvm环境问题.md  foo-safe作用.md  github_release_template.md  json处理.md  动态链c库.md  安装使用手册.md  编译.txt  自定义c库调用.md
.github/workflows/: rust.yml  zigbuild.yml
assets/: index.html
assets/css/: style.css
assets/js/: app.js
config/: default.toml
foo-safe/: Cargo.toml
foo-safe/src/: lib.rs
foo-sys/: Cargo.toml  build.rs  wrapper.h
foo-sys/c_src/: foo.c  foo.h
foo-sys/src/: lib.rs
src/: main.rs
src/bootstrap/: server.rs
src/common/: error.rs  mod.rs  response.rs  result.rs
src/config/: log.rs  mod.rs  settings.rs
src/db/: mysql.rs
src/excel/: excel_error.rs  excel_reader.rs  excel_util.rs  excel_writer.rs  execl流读写.md  mod.rs
src/handler/: mod.rs  user_handler.rs
src/middleware/: auth.rs  layers.rs  mod.rs  panic_handler.rs
src/model/: app_state.rs  mod.rs  mqtt_message.rs  user.rs
src/mqtt/: consumer.rs  producer.rs
src/redis/: mod.rs  pub_sub_consumer.rs  redis_client.rs  stream_consumer.rs
src/repository/: user_repo.rs
src/router/: api_router.rs  mod.rs
src/service/: mod.rs  user_service.rs
src/state/: app_state.rs
src/static/: embed.rs  handler.rs  mod.rs
src/utils/: base64_util.rs  command.rs  crypt_util.rs  http_client.rs  json_util.rs  jwt.rs  mod.rs  sign_util.rs
templates/: test.xlsx
