[package]
name = "axum-openwrt"
version = "0.1.0"
edition = "2024"

[dependencies]

# 异步运行时
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tokio-stream = "0.1"

# Web框架
axum = "0.8.8"

# HTTP工具
tower = "0.5"
# | Feature          | 作用       |
# | ---------------- | -------- |
# | compression-gzip | gzip压缩   |
# | compression-br   | brotli压缩 |
# | trace            | HTTP日志   |
# | cors             | 跨域       |
# | timeout          | 超时       |
# | request-id       | 请求ID     |
tower-http = { version = "0.6", features = [
    "trace",
    "catch-panic",
    "cors",
    "compression-gzip",
    "compression-br",
    "timeout",
    "util",
    "set-header"
] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1", features = ["v4"] }

# 错误处理
thiserror = "1"
# 错误处理
anyhow = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "json"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["clock"] }

# 配置文件
config = "0.14"
# 加载toml文件
toml = "0.8"
# 正则
regex = "1"
# 延迟加载
once_cell = "1"

# 内存分配优化
mimalloc = { version = "0.1", default-features = false }

# 异步trait
async-trait = "0.1"

# 时间处理
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "mysql",
    "macros",
    "chrono",
    "uuid"
] }

# redis = { version = "1.0", features = ["tokio-comp"] }
deadpool-redis = { version = "0.22", features = ["rt_tokio_1"] }
url = "2.5.8"

# RUSTFLAGS="-C target-cpu=native"
rumqttc = "0.25"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# JWT
jsonwebtoken = "9"

# 使用 Unix crypt(3) 兼容算法（MD5 / SHA-256 / SHA-512 / bcrypt 等）生成哈希字符
pwhash = "1.0"
sha2 = "0.9.9"
md5 = "0.7"
hex = "0.4.3"
base64 = "0.22"

# 定时任务
tokio-cron-scheduler = "0.10"

# 内嵌资源
# axum-embed = "0.1"          # 最新（基于 rust-embed）,支持静态资源
rust-embed = "8"            # 必须
# 前端资源类型
mime_guess = "2"
# num_cpus = "1.17.0"

# 操作excel
calamine = "0.24"
rust_xlsxwriter = "0.64"

# 临时文件
tempfile = "3.6"   # 最新稳定版本

# 使用c项目的
foo-safe = { path = "./foo-safe" }
[workspace]
members = ["foo-sys", "foo-safe"]



[profile.release]
opt-level = 3
# lto = "fat"
#codegen-units = 1
#panic = "abort"
#strip = true
debug = false
lto = true
codegen-units = 1
strip = true
panic = "abort"

incremental = false

# 体积党可选（牺牲一点性能）
# opt-level = "z"
# lto = "thin"


